--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -50,7 +50,7 @@ const { title, date, description, annotation = "circle" } = Astro.props;
   }
 </script>
 
-<style lang="scss">
+<style>
   .page-head {
     padding-block-end: var(--space-2xl);
 
@@ -63,7 +63,7 @@ const { title, date, description, annotation = "circle" } = Astro.props;
     h1 {
       display: inline;
       text-wrap: balance;
-      margin-inline-start: -0.06em; // Visual alignment
+      margin-inline-start: -0.06em;
       hyphens: auto;
 
       @media (width < 700px) {
