--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -19,7 +19,7 @@ import { RiArrowRightLine } from "@remixicon/react";
   </div>
 </form>
 
-<style lang="scss">
+<style>
   form {
     position: relative;
     border-radius: 5px;
