--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -112,7 +112,7 @@ const { data: post } = await loadQuery<SanityDocument>({
   }
 </ProseLayout>
 
-<style>
+<style lang="scss">
   .authors {
     display: flex;
     flex-direction: column;
