--- a/src/pages/press.astro
+++ b/src/pages/press.astro
@@ -45,7 +45,7 @@ const { data: pressArticles } = await loadQuery<SanityDocument[]>({
   </div>
 </BaseLayout>
 
-<style>
+<style lang="scss">
   .articles {
     padding-bottom: var(--space-3xl);
     columns: 2;
