--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -86,7 +86,7 @@ const linkGroups: LinkGroup[] = [
     </div>
   </div>
 
-  <style>
+  <style lang="scss">
     footer {
       --footerBg: var(--text);
       --footerText: var(--bg);
@@ -172,6 +172,7 @@ const linkGroups: LinkGroup[] = [
         mix-blend-mode: multiply;
         user-select: none;
         animation: snailing 300s infinite linear;
+        // Offset start
         animation-delay: -24s;
       }
     }
