--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,7 +13,7 @@ import BaseLayout from "~/layouts/BaseLayout.astro";
   </div>
 </BaseLayout>
 
-<style>
+<style lang="scss">
   .error {
     flex: 1;
     display: flex;
