--- a/src/components/text/PortableText.astro
+++ b/src/components/text/PortableText.astro
@@ -1,6 +1,7 @@
 ---
 import { PortableText as PortableTextInternal } from "astro-portabletext";
 import type { PortableTextProps } from "astro-portabletext/types";
+import Block from "./Block.astro";
 import Blockquote from "./Blockquote.astro";
 import ExternalLink from "./ExternalLink.astro";
 import HorizontalRule from "./HorizontalRule.astro";
@@ -18,6 +19,7 @@ const { value } = Astro.props;
 
 const components = {
   text: Text,
+  block: Block,
   marks: {
     link: ExternalLink,
     internalLink: InternalLink,
