--- a/src/components/text/Heading.astro
+++ b/src/components/text/Heading.astro
@@ -24,14 +24,14 @@ const HeadingTag = `h${level}` as keyof HTMLElementTagNameMap;
 
   .heading-anchor {
     position: absolute;
-    left: -1.75rem;
+    left: -1em;
     top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     border-radius: 4rem;
-    width: 1.5rem;
+    width: 1em;
     text-decoration: none;
     opacity: 0;
     transition: opacity 0.2s ease;
