--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { RiArrowRightLine } from "@remixicon/react";
 import type { SanityDocument } from "@sanity/client";
 import Partners from "~/components/Partners.astro";
 import PortableText from "~/components/text/PortableText.astro";
-import heroIllustration from "~/content/pages/_images/hero-form.png";
+import heroIllustration from "~/pages/home/hero-form.png";
 import siteInfo from "~/data/site-info";
 import BaseLayout from "~/layouts/BaseLayout.astro";
 import { loadQuery } from "~/sanity/lib/loadQuery";
