--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -57,7 +57,7 @@ import { RiArrowRightLine } from "@remixicon/react";
   }
 
   button {
-    font-weight: 600;
+    font-weight: var(--weight-bold);
     flex-shrink: 0;
     cursor: pointer;
     display: inline-flex;
