--- a/src/components/text/Heading.astro
+++ b/src/components/text/Heading.astro
@@ -40,7 +40,7 @@ const HeadingTag = `h${level}` as keyof HTMLElementTagNameMap;
 
     &:hover,
     &:focus {
-      font-weight: 700;
+      font-weight: var(--weight-bold);
       opacity: 1;
     }
 
