--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -7,7 +7,7 @@ dayjs.extend(utc);
 
 interface Props {
   title: string;
-  date?: Date;
+  date?: string;
   description?: string;
   annotation?: RoughAnnotationType;
 }
@@ -18,7 +18,7 @@ const { title, date, description, annotation = "circle" } = Astro.props;
 <div class="page-head">
   {
     date && (
-      <time class="date" datetime={date.toISOString()}>
+      <time class="date" datetime={date}>
         {dayjs.utc(date).format("MMMM DD, YYYY")}
       </time>
     )
@@ -55,7 +55,7 @@ const { title, date, description, annotation = "circle" } = Astro.props;
     padding-block-end: var(--space-2xl);
 
     .date {
-      font-weight: 700;
+      font-weight: var(--weight-bold);
       display: block;
       margin-block-end: var(--space-l);
     }
