--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,7 +59,7 @@ const { pathname } = Astro.url;
       border-radius: 5px;
       text-decoration: none;
       font-size: var(--step-0);
-      font-weight: 600;
+      font-weight: var(--weight-bold);
 
       &[aria-current="page"],
       &:hover {
