--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -11,7 +11,7 @@ import BaseLayout from "./BaseLayout.astro";
 
 interface Props {
   title: string;
-  date?: string; // ISO 8601 date string from Sanity
+  date?: string;
   description?: string;
   author?: string;
   ogImage?: SanityAssetDocument;
