--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -7,6 +7,7 @@
   fill="currentColor"
   xmlns="http://www.w3.org/2000/svg"
 >
+  <title>Namesake</title>
   <path
     fill-rule="evenodd"
     clip-rule="evenodd"
