content: Add Superbloom credit, footer logo (#255)

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,12 +3,11 @@
 ---
 
 <svg
-  width="149"
-  height="30"
   viewBox="0 0 149 30"
   fill="currentColor"
   xmlns="http://www.w3.org/2000/svg"
 >
+  <title>Namesake</title>
   <path
     fill-rule="evenodd"
     clip-rule="evenodd"
